<resources>
    <string name="app_name">iSFC-倉庫管理</string>

    <!-- Login View -->
    <string name="label_username">账号：</string>
    <string name="hint_username">Please Enter Your Userno</string>
    <string name="label_password">密码：</string>
    <string name="hint_password">Please Enter Your Password</string>
    <string name="label_showPassword">显示密码</string>
    <string name="cb_showPassword">false</string>
    <string name="label_fgPassword">忘记密码</string>
    <string name="btn_login">登陆</string>

    <!-- Title Bar View -->
    <string name="label_left"></string>
    <string name="label_title">@string/app_name</string>
    <string name="label_right"></string>

    <!-- Home View -->
    <string name="btn_inStorage">入库</string>
    <string name="btn_asnRelated">ASN 码关联</string>
    <string name="btn_outStorage">出库</string>

    <!-- InStorage View-->
    <string name="hint_search">请输入单号/料号/缴库部门</string>
    <string name="btn_search">查询</string>
    <string name="btn_addInStorage">扫码新增入库单</string>

    <string name="lobel_inStorageOrder">入库单号</string>
    <string name="label_workOrder">工令单号</string>
    <string name="label_payDepartment">缴库部门</string>

    <string name="label_inStorage_no">未入库</string>
    <string name="label_inStorage_part">部分入库</string>
    <string name="label_inStorage_full">已入库</string>

    <string name="label_materialNum">料号</string>
    <string name="label_materialName">物料名称</string>
    <string name="label_inStorageCount">实际/计划入库数量</string>

    <string name="label_thisInStorage">本次入库</string>
    <string name="label_pallet">栈板</string>
    <string name="label_package">包箱</string>
    <string name="label_material">物料</string>

    <string name="label_scan">请扫描栈板码/箱码</string>

    <string name="label_wareHouse">仓库</string>
    <string name="label_location">储位</string>
    <string name="label_location_code">储位码</string>
    <string name="btn_commit_storage">提交入库</string>

    <string name="tHead_number">序号</string>
    <string name="tHead_code">栈板码/箱码</string>
    <string name="tHead_count_package">包箱数量</string>
    <string name="tHead_count_material">物料数量</string>
    <string name="tHead_asn_code">ASN 码</string>
    <string name="tHead_result">判定结果</string>

    <string name="lable_inStorage_operator">入库人员</string>
    <string name="lable_inStorage_count">入库数量</string>
    <string name="lable_inStorage_date">入库时间</string>
    <string name="label_accept_count">点收数量</string>

    <string name="label_inStorageInfo">入库信息</string>

    <string name="lable_productName">品名</string>
    <string name="label_specific">规格</string>
    <string name="label_unit">单位</string>



    <!-- ASNRelated View-->
    <string name="label_addRelated"> * 请先扫描箱码再扫描 ASN 标签码</string>
    <string name="btn_commit">提交</string>

    <!-- OutStorage View-->
    <string name="btn_addOutStorage">扫码新增出库单</string>


    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
</resources>
