<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_dialog_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    style="@style/ConfirmDialog"
    android:layout_marginEnd="0dp"
    android:background="@drawable/shape_corner_up"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/label_inStorageInfo"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_workOrder"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="123456789"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_materialNum"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="123456789"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_materialName"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="123456789"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="176dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_inStorageCount"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="123456789"
        android:textColor="@color/colorLakeGreenDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="176dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_thisInStorage"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="176dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_location_code"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="123456789"
        android:textColor="@color/colorLakeGreenDark"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_pallet"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="1"
        android:textColor="@color/colorLakeGreenDark"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_package"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="20"
        android:textColor="@color/colorLakeGreenDark"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/label_material"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="100"
        android:textColor="@color/colorLakeGreenDark"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_commit"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="38dp"
        android:layout_marginTop="265dp"
        android:background="@drawable/shape_corner_green"
        android:includeFontPadding="false"
        android:text="@string/btn_confirm"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginTop="265dp"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/shape_corner_gray"
        android:includeFontPadding="false"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorGrayDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>